--- a/src/style.css
+++ b/src/style.css
@@ -45,7 +45,14 @@ body {
 }
 
 .scoreList {
+  display: flex;
+  flex-direction: column;
   border: 1px solid;
   width: 100%;
+  height: 100%;
   list-style: none;
+}
+
+.scoreItem:nth-child(even) {
+  background-color: #cdc9c9;
 }
